--- a/templates/receptor.conf.j2
+++ b/templates/receptor.conf.j2
@@ -1,11 +1,11 @@
 [default]
 node_id={{ lookup('file', receptor_config_dir+'/rh_ansible_'+tower_account_id+'/uuid') }}
+debug=False
 
 [plugin_receptor_catalog]
 username={{ tower_user }}
 password={{ tower_password }}
 url={{ tower_url }}
-ca_file={{ tower_ca_file }}
 verify_ssl={{ tower_validate_certs }}
 
 [node]
