Added support for Bearer Tokens

--- a/templates/receptor.conf.j2
+++ b/templates/receptor.conf.j2
@@ -3,6 +3,7 @@ node_id={{ lookup('file', receptor_config_dir+'/rh_ansible_'+tower_account_id+'/
 debug=False
 
 [plugin_receptor_catalog]
+token={{ tower_token }}
 username={{ tower_user }}
 password={{ tower_password }}
 url={{ tower_url }}
