Fixed rh_ansible_ to rh_ansible_tower

--- a/templates/receptor.conf.j2
+++ b/templates/receptor.conf.j2
@@ -1,5 +1,5 @@
 [default]
-node_id={{ lookup('file', receptor_config_dir+'/rh_ansible_'+tower_account_id+'/uuid') }}
+node_id={{ lookup('file', receptor_config_dir+'/rh_ansible_tower/uuid') }}
 debug=False
 
 [plugin_receptor_catalog]
